--- a/src/TodoListBundle/Resources/config/services.yml
+++ b/src/TodoListBundle/Resources/config/services.yml
@@ -2,3 +2,15 @@ services:
 #    todo_list.example:
 #        class: TodoListBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
+
+    todo_list.doctrine_todo_list_repository:
+        class: TodoListBundle\Repopsitory\DoctrineTodoListRepository
+        arguments: ["@doctrine.orm.entity_manager"]
+
+    todo_list.doctrine_todo_repository:
+        class: TodoListBundle\Repopsitory\DoctrineTodoRepository
+        arguments: ["@doctrine.orm.entity_manager"]
+
+    todo_list.todo_list_controller:
+        class: TodoListBundle\Controller\TodoListController
+        arguments: ["@todo_list.doctrine_todo_list_repository"]
