Oauth connection is working git add app/config/parameters.yml.dist src/TodoListBundle/Controller/OAuthController.php src/TodoListBundle/Google/Client.php

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -21,6 +21,6 @@ parameters:
     application_name: gctodolist
     oauth2_client_id: ~
     oauth2_client_secret: ~
-    oauth2_redirect_uri: ~
+    oauth2_redirect_uri: http://localhost:8000/oauth/callback
     developer_key: ~
-    site_name: ~
+    site_name: localhost:8000
